# backend-engineering-challenge

./: .env  .gitignore  README.md  docker-compose.yml  flake.nix  pyproject.toml
.github/workflows/: release.yml
comb/_QUEEN/: devshells.nix
dev/: logs  output.txt
services/grafana/dashboards/: prometheus.json
services/prometheus/: prometheus.yml
src/: Dockerfile
src/server/: api.py  db.py  requirements.txt
src/unbabel/: calc.py  cli.py  data.py
test/: conftest.py  test_calc.py
