[tool.poetry]
name = "unbabel"
version = "0.1.0"
description = "Backend engineering challenge."
authors = ["Pedro Allen Revez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.5"
pandas = "^1.5.3"
loguru = "^0.6.0"
typer = { extras = ["all"], version = "^0.7.0" }
websockets = "^10.4"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.12.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
unbabel = "src.unbabel.cli:main"
